<resources>
    <string name="imc_calculator">Calculadora IMC</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="height_m">Altura (m)</string>
    <string name="weight_kg">Peso (kg)</string>
    <string name="login">ENTRAR</string>
    <string name="register">CADASTRE-SE</string>
    <string name="calculate">CALCULAR</string>
    <string name="clear">LIMPAR</string>
    <string name="developed_by">Desenvolvido por Matheus Moura</string>
    <string name="required_field">Campo obrigatório!</string>
    <string name="login_successful">Usuário Logado</string>
    <string name="email_password_wrong">Email ou senha inválidos!</string>
    <string name="select_gender">Selecione o gênero</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="is_empty">Preencha todos os campos</string>
    <string name="hello">Olá</string>
    <string name="attention">Atenção</string>
    <string name="logout_confirmation">Você realmente deseja sair?</string>
    <string name="discard_confirmation">Você realmente deseja descartar?</string>
    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="fields_clear">Os campos foram limpos</string>
    <string name="result">RESULTADO</string>
    <string name="description">Descrição</string>
    <string name="imc_kg_m">IMC (kg/m²)</string>
    <string name="underweight">Abaixo do peso</string>
    <string name="from_16_to_18_4">de 16 até 18.4</string>
    <string name="normal">Normal</string>
    <string name="from_18_5_to_24_9">de 18.5 até 24.9</string>
    <string name="overweight">Sobrepeso</string>
    <string name="from_25_at_29_9">de 25 até 29.9</string>
    <string name="obese_class_1">Obesidade Grau I</string>
    <string name="from_30_to_34_9">de 30 até 34.9</string>
    <string name="obese_class_2">Obesidade Grau II</string>
    <string name="from_35_at_39_9">de 35 até 39.9</string>
    <string name="obese_class_3">Obesidade Grau III</string>
    <string name="from_40">a partir de 40</string>
    <string name="severely_underweight">Muito abaixo do peso</string>
    <string name="from_15_to_15_9">de 15 até 15.9</string>
    <string name="body_mass_index">Índice de Massa Corporal</string>
    <string name="save">SALVAR</string>
    <string name="discard">DESCARTAR</string>
</resources>