<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/result"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toStartOf="@+id/editTextPersonBMI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableLayoutResultDescription" />

    <TableLayout
        android:id="@+id/TableLayoutResultDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBMIFormula">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description"
                android:textSize="22sp" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/imc_kg_m"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severely_underweight" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_15_to_15_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underweight" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_16_to_18_4" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_18_5_to_24_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overweight" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_25_at_29_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_class_1" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_30_to_34_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_class_2" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_35_at_39_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_class_3" />

            <TextView
                style="@style/tableItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_40" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/body_mass_index"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBMIFormula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_no_icon"
        android:clickable="false"
        android:contextClickable="false"
        android:cursorVisible="false"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="false"
        android:text="@string/result"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiscard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonDiscard"
        style="@style/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/discard"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toTopOf="@+id/buttonSave" />

    <ImageView
        android:id="@+id/imageViewBMIFormula"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/TableLayoutResultDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMI"
        app:srcCompat="@drawable/bmi_formula"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>